PlacementManagementSystem/force-app/main/default/objects/Job__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>