PlacementManagementSystem/force-app/main/default/objects/Job__c/fields/Minimum_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Minimum_CGPA__c</fullName>
    <label>Minimum CGPA</label>
    <precision>11</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>